[tool.poetry]
name = "gncitizen-hub-backend"
version = "0.1.0"
description = "json-form-share backend, based on Django and DJango-Rest-Framework"
authors = ["hypsug0 <fcloitre@dbchiro.org>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
djangorestframework = "^3.14.0"
python-decouple = "^3.7"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
django = "^4.1.6"
drf-yasg = "^1.21.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.16.1"

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 99
target-version = ['py37']

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 99

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
